group 'com.kellerkompanie'
version '1.0'

apply plugin: 'java'
apply plugin: 'application'

sourceCompatibility = 12

mainClassName = 'com.kellerkompanie.kekosync.server.KekoSyncServer'

repositories {
    mavenCentral()
}

dependencies {
    compile project(':kekosync-core')
    compile group: 'commons-cli', name: 'commons-cli', version: '1.4'
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.6.1'
    compile 'com.google.code.gson:gson:2.8.2'
    compile group: 'org.ini4j', name: 'ini4j', version: '0.5.4'

    compileOnly 'org.projectlombok:lombok:1.18.6'
    annotationProcessor 'org.projectlombok:lombok:1.18.6'
    implementation 'org.mariadb.jdbc:mariadb-java-client:2.1.2'
}
